package edu.guia.solid.dip.abstractfactory;

public class EmailChannel implements NotificationChannel {
    public void send(String to, String message) { /* enviar email real omitido */ }
}
